--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,8 +25,8 @@
                     href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">HOME</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">ABOUT</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
-                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#cv">CV</a>
-                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#publications">PUBLICATIONS</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/cv">CV</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/publications">PUBLICATIONS</a>
                 {% include dropdown.html %}
             </div>
 
