--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,12 +14,15 @@
                 target="_blank">
                 <i class="fas fa-envelope"></i>Send me an Email
             </a>
-            {% endunless %}
-            {% unless site.twitter_username == %}
-            <a id="contact-button" href="https://www.twitter.com/intent/tweet?screen_name={{site.twitter_username}}"
+            <a id="contact-button" href="https://scholar.google.com/citations?user=A0HVAAkAAAAJ&hl=en"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
                 target="_blank">
-                <i class="fab fa-twitter"></i>Tweet me on Twitter
+                <i class="fas fa-envelope"></i>Google Scholar
+            </a>
+            <a id="contact-button" href="https://bsky.app/profile/julia-penndorf.bsky.social"
+                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
+                target="_blank">
+                <i class="fab fa-twitter"></i>Bluesky
             </a>
             {% endunless %}
             <hr>
