--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -26,8 +26,8 @@
             </a>
             {% endunless %}
             <hr>
-            <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
-                You Can find me here
+           <!-- <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
+                You Can find me here 
             </h3>
             <div class="column is-full is-size-3">
                 {% unless site.facebook_username == %}
@@ -60,7 +60,7 @@
                 {% unless site.spotify_username ==  %}
                 <a href="http://open.spotify.com/user/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
                 {% endunless %}
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
