--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,8 +18,13 @@
                             </a>
                         </div>
                         <div>
-                            <a href="{{site.url}}{{site.baseurl}}/blog"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Blog</a>
+                            <a href="{{site.url}}{{site.baseurl}}/cv"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">CV</a>
+                            </a>
+                        </div>
+                                                <div>
+                            <a href="{{site.url}}{{site.baseurl}}/publications"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Publications</a>
                             </a>
                         </div>
                     </div>
