--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/cv">CV</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/publications">PUBLICATIONS</a>
-                <!-- {% include dropdown.html %} -->
+                {% include dropdown.html %} 
             </div>
 
         </div>
