--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,13 +10,13 @@
             {% endunless %}
             {% unless site.email == %}
             <a id="contact-button" href="mailto:{{site.email}}"
-                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifths"
+                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
                 target="_blank">
                 <i class="fas fa-envelope"></i>Email
             </a>
             
             <a id="contact-button" href="https://bsky.app/profile/julia-penndorf.bsky.social"
-                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifths"
+                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
                 target="_blank">
                 <i class="fab fa-twitter"></i>Bluesky
             </a>
