--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,19 +13,14 @@
                     <div class="container columns is-centered">
                         <div>
                             <a href="{{site.url}}{{site.baseurl}}/#contact"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Contact
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Email
                             </a>
                         </div>
-                        <div>
-                            <a href="{{site.url}}{{site.baseurl}}/cv"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">CV</a>
-                            </a>
-                        </div>
-                                                <div>
-                            <a href="{{site.url}}{{site.baseurl}}/publications"
-                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Publications</a>
-                            </a>
-                        </div>
+                       <div> <a id="contact-button" href="https://bsky.app/profile/julia-penndorf.bsky.social"
+                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
+                target="_blank">
+                <i class="fab fa-twitter"></i>Bluesky
+                            </a></div>
                     </div>
                 </div>
             </div>
