--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
                 <i class="fab fa-facebook-messenger"></i>Ping me on Messenger
             </a>
             {% endunless %}
-            {% unless site.email == %}
+           <!-- {% unless site.email == %}
             <a id="contact-button" href="mailto:{{site.email}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
                 target="_blank">
@@ -17,8 +17,8 @@
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
                 target="_blank">
                 <i class="fab fa-twitter"></i>Bluesky
-            </a>
-            {% endunless %}
+            </a> 
+            {% endunless %}-->
             <hr>
            <!-- <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
                 You Can find me here 
