--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,8 +18,7 @@
                         </div>
                        <div> <a id="contact-button" href="https://bsky.app/profile/julia-penndorf.bsky.social"
                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-one-fifth"
-                target="_blank">
-                <i class="fab fa-twitter"></i>Bluesky
+                target="_blank">Bluesky
                             </a></div>
                     </div>
                 </div>
